mutants.out/log/src__proto__client__mod.rs_line_409_col_9_001.log

*** src/proto/client/mod.rs:409:9: replace ReadToken<'a, S>::read_json -> Result<Option<T>, Error> with Ok(Some(Default::default()))

*** mutation diff:
--- src/proto/client/mod.rs
+++ replace ReadToken<'a, S>::read_json -> Result<Option<T>, Error> with Ok(Some(Default::default()))
@@ -401,11 +401,11 @@
     pub(crate) async fn read_ok(self) -> Result<(), Error> {
         single::read_ok(&mut self.0.stream).await
     }
 
     pub(crate) async fn read_json<T>(self) -> Result<Option<T>, Error>
     where
         T: serde::de::DeserializeOwned,
     {
-        single::read_json(&mut self.0.stream).await
+        Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
     }
 }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `T: Default` is not satisfied
   --> src/proto/client/mod.rs:409:17
    |
409 |         Ok(Some(Default::default())) /* ~ changed by cargo-mutants ~ */
    |                 ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `T`
    |
help: consider further restricting this bound
    |
407 |         T: serde::de::DeserializeOwned + std::default::Default,
    |                                        +++++++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
